hphp/hack/test/typecheck/expression_trees/splice_variable4.php.exp
File "splice_variable4.php", line 15, characters 5-6:
Variable `$x` is undefined, or not always defined. (Naming[2050])
  File "splice_variable4.php", line 13, characters 7-18:
  Did you mean `$0splice0` instead?
